--- a/composer.json
+++ b/composer.json
@@ -16,20 +16,18 @@
         }
     ],
     "require": {
-        "php"                                 : ">=5.4.0",
-        "jarednova/timber"                    : "dev-master",
-        "jjgrainger/wp-custom-post-type-class": "~1.3.1",
-        "roots/soil"                          : "~3.0"
+        "php"                                           : ">=5.4.0",
+        "jjgrainger/wp-custom-post-type-class"          : "~1.3.1"
     },
     "require-dev": {
-        "fabpot/php-cs-fixer"                 : "~1.8",
-        "sensiolabs/security-checker"         : "~2.0"
+        "fabpot/php-cs-fixer"                           : "~1.8",
+        "sensiolabs/security-checker"                   : "~2.0"
     },
     "autoload": {
         "psr-4": {
-            "Gwa\\Wordpress\\Template\\"      : "src/gwa/"
-        },
-        "files": ["src/gwa/Tgm/TgmPluginActivation.php"]
+            "Gwa\\Wordpress\\Template\\Zero\\Tgm\\"     : "src/tgm/",
+            "Gwa\\Wordpress\\Template\\Zero\\Library\\" : "src/library/"
+        }
     },
     "repositories": [{
         "type"         : "package",
