--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "autoload": {
         "psr-4": {
             "Gwa\\Wordpress\\Template\\Zero\\Library\\" : "src/library/"
-        }
+        },
+        "files": ["src/library/tgm/TgmPluginActivation.php"]
     },
     "repositories": [{
         "type"         : "package",
