--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
     ],
     "require": {
         "php"                                           : ">=5.4.0",
-        "jjgrainger/wp-custom-post-type-class"          : "~1.3.1",
-        "tgmpa/tgm-plugin-activation"                   : "2.4.2"
+        "jjgrainger/wp-custom-post-type-class"          : "~1.3.1"
     },
     "require-dev": {
         "fabpot/php-cs-fixer"                           : "~1.8",
@@ -28,7 +27,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Gwa\\Wordpress\\Template\\Zero\\Library\\" : "src/library/"
+            "Gwa\\Wordpress\\Template\\Zero\\Library\\" : "library/",
+            "Gwa\\Wordpress\\Template\\Zero\\"          : "theme/"
         }
     },
     "repositories": [{
