cs fixes, changes on scrutinizer, some bug fixes

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,7 +1,7 @@
 
 filter:
     paths: ['src/*']
-    excluded_paths: [tests/*, vendor/*, src/library/tgm/*, src/library/timber/*]
+    excluded_paths: [tests/*, vendor/*, library/timber/*]
 
 checks:
     php:
@@ -106,8 +106,7 @@ tools:
                 - 'bin/*'
                 - 'vendor/*'
                 - 'tests/*'
-                - 'src/library/tgm/*'
-                - 'src/library/timber/*'
+                - 'library/timber/*'
 
     php_loc:
         enabled:                 true
@@ -116,11 +115,10 @@ tools:
         command:                 phploc
         filter:
             excluded_paths:
-                - bin
+                - bin/*
                 - vendor
                 - tests/*
-                - src/library/tgm/*
-                - src/library/timber/*
+                - library/timber/*
 
     php_mess_detector:
         enabled:                 true
@@ -132,8 +130,7 @@ tools:
                 - 'bin/*'
                 - 'vendor/*'
                 - 'tests/*'
-                - 'src/library/tgm/*'
-                - 'src/library/timber/*'
+                - 'library/timber/*'
     php_cpd:
         enabled:                 false
 
@@ -146,8 +143,7 @@ tools:
                 - 'bin/*'
                 - 'vendor/*'
                 - 'tests/*'
-                - 'src/library/tgm/*'
-                - 'src/library/timber/*'
+                - 'library/timber/*'
 
     php_pdepend:
         enabled:                 true
@@ -155,10 +151,9 @@ tools:
             - php
         command:                 pdepend
         excluded_dirs:
-            - bin
+            - bin/*
             - vendor
             - tests/*
-            - src/library/tgm/*
-            - src/library/timber/*
+            - library/timber/*
 
     sensiolabs_security_checker: true
