--- a/composer.json
+++ b/composer.json
@@ -17,16 +17,14 @@
     ],
     "require": {
         "php"                                           : ">=5.4.0",
-        "jjgrainger/wp-custom-post-type-class"          : "~1.3.1"
+        "gwa/zero-library"                              : "~1.0.0"
     },
     "require-dev": {
-        "fabpot/php-cs-fixer"                           : "~1.8",
-        "phpunit/phpunit"                               : "~4.6.4",
-        "satooshi/php-coveralls"                        : "~0.6.1"
+        "fabpot/php-cs-fixer"                           : "~1.8.1",
+        "phpunit/phpunit"                               : "~4.7"
     },
     "autoload": {
         "psr-4": {
-            "Gwa\\Wordpress\\Template\\Zero\\Library\\" : "library/",
             "Gwa\\Wordpress\\Template\\Zero\\"          : "theme/"
         }
     },
@@ -34,6 +32,10 @@
         "installer-name": "zero"
     },
     "repositories": [{
+        "type": "composer",
+        "url" : "http://wpackagist.org"
+    },
+    {
         "type"         : "package",
         "package": {
             "name"     : "jarednova/php-router",
